# MTProxy

./: $null  .dockerignore  .env.example  .gitignore  API_REFERENCE.md  BENCHMARKS.md  BUILD_CMAKE.md  BUILD_WINDOWS.md  CHANGELOG.md  CMakeLists.advanced.txt  CMakeLists.optimized.txt  CMakeLists.txt  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FIXES_SUMMARY.md  IMPROVEMENTS_MARCH_2026.md  IMPROVEMENTS_PLAN.md  IMPROVEMENTS_PLAN_2.md  LGPLv2  LICENSE  MEMORY_FIXES.md  Makefile  Makefile.advanced  Makefile.optimized  NOTES_RU.md  PROJECT_INDEX.md  README.md  README_EN.md  RELEASE_NOTES_v1.0.27.md  RELEASE_NOTES_v1.0.28.md  RELEASE_NOTES_v1.0.29.md  RELEASE_NOTES_v1.0.30.md  RELEASE_NOTES_v1.0.31.md  RELEASE_NOTES_v1.0.32.md  RELEASE_NOTES_v1.0.33.md  ROADMAP.md  RUNNING_MANUAL.md  RUSSIAN_COMPLETION_SUMMARY.md  (+24 more)
admin/: admin-cli.c  admin-cli.h  admin-rest-api.c  admin-rest-api.h  admin-web-interface.c  admin-web-interface.h  main.c
api/: grpc-server.c  grpc-server.h
build-scripts/: README.md
cli/: mtcli.c  mtcli.h
cmake/: arm64-toolchain.cmake  freebsd-toolchain.cmake
common/: advanced-logger.c  advanced-logger.h  audit-log.c  audit-log.h  cache-manager.c  cache-manager.h  cache-memory-pool.c  cache-memory-pool.h  common-stats.c  config-manager.c  config-manager.h  config-profiles.c  config-profiles.h  cpuid.c  cpuid.h  crc32.c  crc32c.c  error-codes.c  error-codes.h  error-handler.c  error-handler.h  extended-config.h  health-check.h  kprintf.c  kprintf.h  log-aggregator.c  log-aggregator.h  memory-allocator.h  memory-limits.c  memory-limits.h  metrics-collector.h  mp-queue.c  mp-queue.h  mtproxy-fixes-simple.h  mtproxy-fixes.h  netdb.h  platform_compat.h  platform_network.c  platform_network.h  posix-compat-windows.h  (+20 more)
conn_pool/: adaptive-connection-pool.c  adaptive-connection-pool.h  advanced-connection-optimizer.c  advanced-connection-optimizer.h  conn-pool.c  conn-pool.h  simple-advanced-connection-optimizer.c
crypto/: advanced-crypto-opt.c  advanced-crypto-opt.h  aes-optimized.c  aes-optimized.h  aesni256.c  crypto-optimizer.c  crypto-optimizer.h  crypto-performance-optimizer.c  crypto-performance-optimizer.h  dh-optimized.c  dh-optimized.h  enhanced-crypto-optimizer.c  enhanced-crypto-optimizer.h  obfuscate.c  obfuscate.h  vectorized-crypto.c  vectorized-crypto.h
demos/: web-interface-demo-ru.c  web-interface-demo.c
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: ADMIN_CLI_GUIDE.md  ADVANCED_CONFIGURATION_MANAGEMENT.md  ADVANCED_LOGGING_RU.md  ADVANCED_LOGGING_SYSTEM.md  ADVANCED_PERFORMANCE.md  ADVANCED_SECURITY.md  ADVANCED_SHADOWSOCKS.md  ARM64_SUPPORT.md  BUILD_CMAKE.md  CACHE_SYSTEM_RU.md  CI_CD_GUIDE.md  CLI_GUIDE.md  CLI_GUIDES.md  CMAKE_OPTIMIZATIONS_RU.md  CONFIGURATION_ENHANCEMENTS_RU.md  CRYPTO_OPTIMIZATIONS_RU.md  DEBUGGING.md  DEBUGGING_TROUBLESHOOTING.md  FFI_INTEGRATION_TESTING.md  FREEBSD_SUPPORT.md  GITIGNORE_DOCUMENTATION_RU.md  HEALTH_CHECK_IMPLEMENTATION.md  HTTP3_QUIC_SUPPORT.md  IMPROVEMENTS_SUMMARY.md  MEMORY_OPTIMIZATION_RU.md  ML_SYSTEMS.md  MODULAR_ARCHITECTURE_RU.md  MONITORING_AND_API.md  MONITORING_OBSERVABILITY.md  NETWORK_MONITORING_PROFILING.md  OBFUSCATION.md  OBFUSCATION_ENHANCEMENTS_RU.md  PERFORMANCE_OPTIMIZATIONS_RU.md  PERFORMANCE_TUNING.md  PLATFORM_SUPPORT.md  PLUGIN_DEVELOPER_GUIDE.md  PLUGIN_SYSTEM.md  PROJECT_ENHANCEMENT_COMPLETE.md  RUNNING_MANUAL.md  RUSSIAN_PROJECT_DOCUMENTATION.md  (+11 more)
engine/: engine-net.c  engine-rpc.c  engine.c  engine.h
examples/: USAGE_EXAMPLES.md  mtproxy-examples.c  mtproxy-examples.h
general/: config_manager.c  config_manager.h  mtproxy-enhanced.h  protocol-manager.c  protocol-manager.h
grafana/: README.md  mtproxy-dashboard.json  mtproxy-enhanced-dashboard.json
include/: mtproxy.h  plugin-system.h
infrastructure/: advanced-load-balancer.c  advanced-load-balancer.h  auto-scaling.c  auto-scaling.h  load-balancer.c  load-balancer.h
jobs/: jobs.c  jobs.h
licenses/: LICENSE  README.md
ml/: anomaly-detector.c  anomaly-detector.h  traffic-optimizer.c  traffic-optimizer.h
mobile_app/: .gitignore  DOCS.md  QUICKSTART.md  README.md  analysis_options.yaml  build-native-libs.sh  build-native-windows.ps1  dart-format.yaml  ffigen.yaml  l10n.yaml  pubspec.yaml
mtproto/: mtproto-config.c  mtproto-proxy.c  mtproto-v3-adapter.c  mtproto-v3-adapter.h  mtproto-version-manager.c  mtproto-version-manager.h
net/: adaptive-protocol-manager.c  adaptive-protocol-manager.h  advanced-connection-pool.c  advanced-network.c  advanced-network.h  async-network-optimizer.c  async-network-optimizer.h  dns-cache.c  dns-cache.h  enhanced-tls-obfuscation.c  enhanced-tls-obfuscation.h  fragmentation.c  fragmentation.h  http3-quic.c  http3-quic.h  io_uring.c  io_uring.h  multiproto-manager.c  multiproto-manager.h  net-buffer-manager.c  net-connections-pool.c  net-connections-pool.h  net-connections.c  net-connections.h  net-crypto-aes.c  net-crypto-aes.h  net-enhanced-networking.c  net-enhanced-networking.md  net-event-handler.c  net-events.c  net-events.h  net-health-check.h  net-msg-buffers.c  net-msg.c  net-msg.h  net-performance-manager.c  net-performance-manager.h  net-quic-connections.c  net-quic-connections.h  net-stats.c  (+43 more)
perf_monitor/: advanced-metrics.c  advanced-metrics.h  advanced-monitoring.c  advanced-monitoring.h  distributed-tracing-system.c  distributed-tracing-system.h  distributed-tracing.c  distributed-tracing.h  enhanced-observability.c  enhanced-observability.h  enhanced-performance-monitor.c  enhanced-performance-monitor.h  extended-monitoring.c  extended-monitoring.h  perf-monitor.c  perf-monitor.h  performance-analyzer.h  simple-monitoring.c  simple-monitoring.h
plugins/: blacklist-plugin.c  example-logger.c  ratelimit-plugin.c
prometheus/: mtproxy-alerts.yml  prometheus.yml
scripts/: README.md  build-docker.sh  build_windows.bat  deploy-docker.sh  docker-test.sh  metrics_collector.py  monitor.sh  prometheus_exporter.py  run_all_tests.bat  run_all_tests.sh  update-secrets.bat  update-secrets.sh
src/: mtproxy.c
(+262 files in other folders)
